infra/uds-bundles/uds-bundles/PER_BUNDLE/sentra/manifests/namespace.yaml
# Copyright 2026 SZL Holdings — SPDX-License-Identifier: Apache-2.0
apiVersion: v1
kind: Namespace
metadata:
  name: sentra
  labels:
    app.kubernetes.io/part-of: szl-mesh
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: restricted
