infra/uds-bundles/uds-bundles/PER_BUNDLE/sentra/manifests/virtualservice.yaml
# Copyright 2026 SZL Holdings — SPDX-License-Identifier: Apache-2.0
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sentra
  namespace: sentra
spec:
  hosts:
    - "sentra.uds.dev"
  gateways:
    - istio-tenant-gateway/tenant
  http:
    - match:
        - uri:
            prefix: /api/sentra
      route:
        - destination:
            host: sentra.sentra.svc.cluster.local
            port:
              number: 8080
